# hoover

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: issue_report.md
.github/workflows/: test.yml
docs/: codex-for-oss-application.md
examples/: issue.md
src/hoover/: __init__.py  cli.py  parser.py
tests/: test_parser.py
