[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hoover-maintainer-toolkit"
version = "0.1.0"
description = "A dependency-light maintainer brief generator for open source issue reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "imhoover" }
]
keywords = ["open-source", "maintainers", "triage", "issues", "cli"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Bug Tracking",
  "Topic :: Software Development :: Documentation"
]

[project.scripts]
hoover = "hoover.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
